@@ -3,6 +3,7 @@
 - Only open regular files in filecap
 - Make building Python bindings optional
 - Python bindings update (arfrever.fta)
+- Fix filecap segfault when checking a specific file
 
 0.6.4
 - Update packet socket code to print interface
